glue/codegen/src/snapshots/codegen__codegen_python__tests__record_string_to_any.snap
---
source: codegen/src/codegen_python.rs
expression: output
---
# pylint: disable=missing-class-docstring, missing-function-docstring, missing-module-docstring
from pydantic import BaseModel
from pydantic import Field
from enum import StrEnum
from typing import Any, Annotated, Optional, Union

class Item(BaseModel):
    raw_data: Annotated[dict[str, Any], Field()]
    """A map of string keys to any values"""
