glue/codegen/src/snapshots/codegen__codegen_python__tests__record_string_to_int.snap
---
source: codegen/src/codegen_python.rs
expression: output
---
# pylint: disable=missing-class-docstring, missing-function-docstring, missing-module-docstring

from pydantic import BaseModel
from pydantic import Field
from enum import StrEnum
from typing import Any, Annotated, Optional, Union

class Scores(BaseModel):
    scores: Annotated[dict[str, int], Field()]
    """Player scores by name"""
